# munnin

./: .gitignore  README.md  pubspec.yaml  test.md  tmp_renderer.dart  todo.md
assets/templates/: welcome.md
integration_test/: simple_test.dart
lib/: main.dart  test.dart  test_table.dart
lib/core/commands/: app_command.dart  command_manager.dart  commands.dart
lib/core/constants/: app_sizes.dart
lib/core/theme/: builtin_themes.dart  crow_style.dart  theme.dart  theme_manager.dart
lib/features/editor/: editor.dart
lib/features/explorer/: explorer.dart
lib/features/navigation/: navigation.dart
lib/features/settings/: settings.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/theme/: theme_manager.dart
lib/ui/: bottom_navigation.dart  responsive_layout.dart  top_bar.dart
lib/ui/commands/: top_bar_search.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: fs.rs  mod.rs  models.rs  parser.rs  search.rs  search_test.rs  settings.rs  simple.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  gradle.properties  settings.gradle
rust_builder/ios/: rust_lib_munnin.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_munnin.podspec
rust_builder/windows/: CMakeLists.txt
scripts/: generate_icons.dart
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+47 files in other folders)
