[package]
name = "rust_lib_munnin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.103"
chrono = "0.4.45"
flutter_rust_bridge = "=2.11.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
