[package]
name = "rust_lib_munnin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.103"
chrono = "0.4.45"
directories = "6.0.0"
flutter_rust_bridge = "=2.11.1"
pulldown-cmark = "0.13.4"
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
walkdir = "2.5.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
